[package]
name = "mev-lib"
version = "0.1.0"
edition = "2024"
license = "MIT"
readme = "README.md"
description = "MEV utilities library for Ethereum mainnet"
repository = "https://github.com/darkhorse-techsolution/mev-lib"
keywords = ["ethereum", "mev", "blockchain", "defi"]
categories = ["cryptography::cryptocurrencies"]

[dependencies]
